<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_temperature"
        android:icon="@drawable/ic_baseline_ac_unit_24"
        android:title="@string/nav_temperature" />
    <item
        android:id="@+id/nav_distance"
        android:icon="@drawable/ic_baseline_square_foot_24"
        android:title="@string/nav_distance" />
    <item
        android:id="@+id/nav_currency"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/nav_currency" />
    <item
        android:id="@+id/nav_time"
        android:icon="@drawable/ic_baseline_access_time_24"
        android:title="@string/nav_time" />
    <item
        android:id="@+id/nav_number"
        android:icon="@drawable/ic_baseline_money_24"
        android:title="@string/nav_number" />
</menu>